[package]
name = "damo_fetch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "damo_fetch"
path = "src/damo_fetch.rs"


[dependencies]
nixinfo = "*"
#nixinfo = { git = "https://github.com/Dam-0/nixinfo" }