[package]
name = "gui-is-a-sin"
version = "0.1.0"
authors = ["Damien Peters <damien.peters2000@gmail.com>"]
license = "MIT"
description = "A system information printer"
readme = "README.md"
homepage = "https://github.com/Dam-0/funtime_projects/"
repository = "https://github.com/Dam-0/funtime_projects/tree/main/2021/rust_stuff/gui-is-a-sin"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminal-menu = "*"
crossterm = "0.20.0"
damo_fetch = "0.1.0"