[package]
name = "gui-is-a-sin"
version = "0.2.1"
authors = ["Damien Peters <damien.peters2000@gmail.com>"]
license = "MIT"
description = "A system information printer"
readme = "README.md"
homepage = "https://github.com/Dam-0/funtime_projects/"
repository = "https://github.com/Dam-0/funtime_projects/tree/main/2021/rust_stuff/gui-is-a-sin"
keywords = ["cli"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "damo_fetch"
path = "../damo_fetch/src/lib.rs"


[dependencies]
terminal-menu = "*"
async-std = "1.9.0"
crossterm = "0.20.0"
nixinfo = { git = "https://github.com/Dam-0/nixinfo" }